# meoxa_secretary

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_settings_and_superadmin.py  0003_audit_log.py  0004_graph_subscriptions.py  0005_mfa_branding_billing_memory.py  0006_meeting_recordings.py  0007_onboarding.py  0008_usage_invitations_planner.py  0009_email_pipeline_and_ms_health.py  0009_email_pipeline_ms_health.py  0010_email_urgency.py  0011_search_and_templates.py
backend/meoxa_secretary/: __init__.py  config.py  database.py  main.py
backend/meoxa_secretary/api/v1/: __init__.py  admin.py  agenda.py  auth.py  billing.py  dashboard.py  email_templates.py  emails.py  integrations.py  meetings.py  search.py  status.py  team.py  tenant.py  tenant_insights.py  (+2 more)
backend/meoxa_secretary/core/: crypto.py  deps.py  logging.py  observability.py  rate_limit.py  security.py
backend/meoxa_secretary/models/: __init__.py  audit.py  base.py  billing.py  email.py  email_template.py  integration.py  invitation.py  meeting.py  memory.py  setting.py  subscription.py  tenant.py  usage.py  user.py
backend/meoxa_secretary/schemas/: __init__.py  auth.py  settings.py
backend/meoxa_secretary/scripts/: bootstrap_admin.py  promote_superadmin.py  seed.py
backend/meoxa_secretary/services/: audit.py  billing.py  context.py  cost_guardrail.py  digest.py  dpa.py  email_filters.py  embeddings.py  feedback.py  invitations.py  llm.py  meeting_recording.py  mfa.py  microsoft_graph.py  microsoft_integration.py  microsoft_subscription.py  notifications.py  notion.py  planner.py  retention.py  scheduling.py  settings.py  signature_detector.py  teams_bot.py  tenant_data.py  usage.py  whisper.py
backend/meoxa_secretary/workers/: celery_app.py
backend/tests/: conftest.py  test_email_filters.py  test_health.py  test_mfa.py  test_scheduling.py  test_signature_detector.py  test_usage_pricing.py
(+73 files in other folders)
