[project]
name = "meoxa-secretary"
version = "0.1.0"
description = "SaaS multi-tenant d'automatisation secrétariat (emails, CR réunions, agenda)"
requires-python = ">=3.12"
authors = [{ name = "MDO Services", email = "mathieu@mdoservices.fr" }]
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.12",
    # Auth + crypto
    # ⚠️ passlib 1.7.4 (dernière release) incompatible avec bcrypt 4.1+,
    # qui a retiré bcrypt.__about__ et rendu strict le hash > 72 bytes.
    "passlib>=1.7.4",
    "bcrypt>=4.0.1,<5.1",
    "pyjwt>=2.9",
    "cryptography>=43.0",
    "pyotp>=2.9",
    "qrcode[pil]>=7.4",
    # DB
    "sqlalchemy>=2.0.35",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    # Workers
    "celery>=5.4",
    "redis>=5.1",
    # Intégrations Microsoft
    "msal>=1.31",
    "httpx>=0.27",
    # LLM
    "anthropic>=0.39",
    # Billing
    "stripe>=11.2",
    # Vector store (embeddings RAG)
    "pgvector>=0.3.6",
    # Transcription (bot Teams)
    "faster-whisper>=1.0",
    # Rate limiting
    "slowapi>=0.1.9",
    "limits[redis]>=3.13",
    # Utilitaires
    "python-slugify>=8.0",
    "tenacity>=9.0",
    "structlog>=24.4",
    # Observabilité (GlitchTip ou Sentry)
    "sentry-sdk[fastapi,celery]>=2.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-passlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meoxa_secretary"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
